--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   width:50%;
   padding-left: .5rem;
   padding-bottom: .5rem;
-  height: 1rem;
+  height: calc(1vh*.7rem);
   
   
 
@@ -45,6 +45,9 @@
   padding: 20px;
   background-color: #fff;
   border-radius: 8px; 
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   
 }
 
@@ -57,12 +60,28 @@
   font-size: 25px;
   font-weight: 600;
   color: #000;
-  top: 2;
 }
 
 .input-row{
   text-align: center;
   display: flex;
   justify-content: center;
-  flex: 1;
+}
+
+img{
+  height: 30%;
+  width: 30%;
+  text-align: center;
+}
+
+.data-container{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  font-weight: 500;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: .5rem;
+  margin: 0.5rem;
 }
