--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Jaro:opsz@6..72&family=Protest+Guerrilla&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Rubik+Wet+Paint&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 .protest-guerrilla-regular {
   font-family: "Protest Guerrilla", sans-serif;
   font-weight: 400;
@@ -13,6 +12,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-size: 1.4rem;
   background-color: #f0f0f0; 
 }
 
@@ -54,6 +54,8 @@
 .input-container button{
   all: unset;
   height: 1rem;
+  margin-top: 5px;
+  /* padding-bottom: 5px; */
 }
 
 .input-container span {
@@ -84,4 +86,12 @@ img{
   align-items: center;
   padding: .5rem;
   margin: 0.5rem;
+}
+
+.city-name{
+  font-family: "Rubik Wet Paint", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2rem;
+  color: #eead09;
 }
